--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <!-- <link rel="icon" type="image/png" href="images/seal_icon.png"> -->
 </head>
 
 <body>
@@ -32,7 +31,7 @@
               </p>
               <p>
                 I am a Software Engineer at <a href="https://www.databricks.com/">Databricks</a> working on Data/ML Platform. 
-                I did my undergrad at UC Berkeley, where I studied Computer Science. 
+                I did my undergrad at UC Berkeley, where I studied Computer Science.
               </p>
               <p> 
                 Previously, I worked on Treasury Engineering at <a href="https://www.citadel.com/">Citadel</a>, 
@@ -40,13 +39,14 @@
                 3D Sensor Fusion at <a href="https://scale.com/">Scale AI</a>.
               </p>
               <p>
-                In my free time, I enjoy badminton, chess, and reading about finance.
+                In my free time, I enjoy badminton, tennis and reading about finance.
               </p>
               <p style="text-align:center">
                 <a href="mailto:raymondji@berkeley.edu">Email</a> &nbsp;/&nbsp;
                 <!-- <a href="data/resume.pdf">Resume</a> &nbsp;/&nbsp; -->
                 <a href="http://www.github.com/raymondmengji">Github</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/raymondmengji/">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/raymondmengji/">LinkedIn</a> &nbsp;/&nbsp;
+                <a href="https://blog.raymondji.com">Blog</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -54,45 +54,6 @@
             </td>
           </tr>
         </tbody></table>
-
-        <!-- <table class="section"><tbody>
-          <tr>
-            <td class="heading">
-              <heading>Research</heading>
-              <p>
-                I am broadly interested in distributed systems and databases. 
-                Currently, I am working on distributed database benchmarking on TAO workloads as part of the <a href="https://rise.cs.berkeley.edu/">RISELab</a>.
-              </p>
-            </td>
-          </tr>
-        </tbody></table> -->
-
-        <!-- <table class="section"><tbody> -->
-          <!-- List research projects here -->
-          <!-- <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/???.png">
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="http://arxiv.org/???"> 
-                <papertitle>Paper Title</papertitle>
-              </a>
-              <br>
-              <strong>Charles J. Sun</strong>,
-              <a href="???">Other People</a>,
-              <br>
-              <em>Conference Name</em>, 2020  
-              <br>
-              <a href="https://arxiv.org/???">arXiv</a> / 
-              <a href="???">website</a> / 
-              <a href="https://www.github.com/charlesjsun/???">code</a>
-              <p></p>
-              <p>Description of project...</p>
-            </td>
-          </tr>  -->
-
-          <!-- End research projects list -->
-        <!-- </tbody></table> -->
 
         <table class="section"><tbody>
           <tr>
@@ -127,7 +88,7 @@
               <p style="text-align:right;font-size:small;">
                 <a href="https://github.com/jonbarron/jonbarron_website">Website template from Jon Barron</a>
                 <br>
-                Last updated September 2023
+                Last updated September 2024
               </p>
             </td>
           </tr>
