--- a/index.html
+++ b/index.html
@@ -30,16 +30,11 @@
                 <name>Raymond Ji</name>
               </p>
               <p>
-                I am a Software Engineer at <a href="https://www.databricks.com/">Databricks</a> working on Data/ML Platform. 
+                I am a currently a Machine Learning Engineer at <a href="https://www.databricks.com/">Databricks</a>.
                 I did my undergrad at UC Berkeley, where I studied Computer Science.
               </p>
-              <p> 
-                Previously, I worked on Treasury Engineering at <a href="https://www.citadel.com/">Citadel</a>, 
-                Data Platform at <a href="https://plaid.com/">Plaid</a> and 
-                3D Sensor Fusion at <a href="https://scale.com/">Scale AI</a>.
-              </p>
               <p>
-                In my free time, I enjoy badminton, tennis and reading about finance.
+                In my free time, I attempt to be a badminton/tennis/chess player.
               </p>
               <p style="text-align:center">
                 <a href="mailto:raymondji@berkeley.edu">Email</a> &nbsp;/&nbsp;
